[gd_scene load_steps=4 format=3 uid="uid://g407w5bbx5ci"]

[ext_resource type="Script" path="res://entities/Player/Player.gd" id="1_7wlni"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ut4ij"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_j0con"]
length = 0.5

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_7wlni")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.005, 0)
shape = SubResource("CapsuleShape3D_ut4ij")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.20322, 0)

[node name="Headbob" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="CameraPos" type="Node3D" parent="Head/Headbob"]
unique_name_in_owner = true

[node name="StepUpSeparationRay_F" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.505, -0.566987)
shape = SubResource("SeparationRayShape3D_j0con")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_F"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.505, 0)

[node name="StepUpSeparationRay_L" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.505, -0.566987)
shape = SubResource("SeparationRayShape3D_j0con")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_L"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.505, 0)
hit_from_inside = true

[node name="StepUpSeparationRay_R" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.505, -0.566987)
shape = SubResource("SeparationRayShape3D_j0con")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_R"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.505, 0)
hit_from_inside = true

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="."]

[node name="WallRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.046, 0)
enabled = false
target_position = Vector3(0, 0, -0.567)
